unpackaged/main/default/objects/project_cloud__Work_Stub__c/project_cloud__Work_Stub__c.object-meta.xml
<CustomObject>
    <description>This is a System object used only for creating Time Entry Stubs. It should not be implemented for any other purpose</description>
    <label>Work Stub</label>
    <nameField>
        <displayFormat>STUB-{0}</displayFormat>
        <label>Work Stub Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Stubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>