unpackaged/main/default/objects/project_cloud__Work_Stub__c/fields/project_cloud__Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Date__c</fullName>
    <description>Date the stub was created. This is used to flush out old stubs</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>