unpackaged/main/default/objects/project_cloud__Work_Stub__c/fields/project_cloud__Hash__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hash__c</fullName>
    <formula>CASESAFEID(OwnerId) &amp; CASESAFEID(project_cloud__Parent__c)</formula>
    <label>Hash</label>
    <type>Text</type>
</CustomField>