unpackaged/main/default/objects/project_cloud__Work_Stub__c/fields/project_cloud__Parent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parent__c</fullName>
    <description>The Id of the Parent Object the stub is related to</description>
    <externalId>true</externalId>
    <label>Parent</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>