unpackaged/main/default/objects/project_cloud__Work_Stub__c/fields/project_cloud__Time__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Time__c</fullName>
    <description>The time elapsed as milliseconds. The stopwatch jquery plugin converts this to hh:mm.</description>
    <label>Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>